--- a/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_no_location_found.xml
@@ -13,7 +13,8 @@
         <ImageView
             android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_nospots"/>
         <TextView
             style="@style/ErrorsViewTitleStyle"
             android:text="@string/no_results"/>
