--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_photos_to_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_photos_to_dive_spot.xml
@@ -3,6 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/view_toolbar"/>
+    <ScrollView android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_marginTop="7dp"
@@ -11,10 +18,13 @@
         android:layout_height="wrap_content"/>
     <Button
         android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:id="@+id/button_share"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border_button_orange_2px"
         android:text="@string/add_photos_to_dive_spot"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
