--- a/trunk/ddscanner/app/src/main/res/layout/fragmnet_activity_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragmnet_activity_notifications.xml
@@ -50,7 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:overScrollMode="never"/>
         <com.rey.material.widget.ProgressView
             android:id="@+id/progress_bar_pagination"
             android:layout_width="match_parent"
