--- a/trunk/ddscanner/app/src/main/res/layout/dialog_yes_no.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dialog_yes_no.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/no_button"
                 app:layout_widthPercent="50%"
                 android:layout_height="45dp"
-                android:background="@drawable/dialog_no_button"
+                style="@style/NoButtonDialogStyle"
                 android:text="@string/no" />
 
             <Button
@@ -58,7 +58,7 @@
                 android:id="@+id/yes_button"
                 app:layout_widthPercent="50%"
                 android:layout_height="45dp"
-                android:background="@drawable/dialog_yes_button"
+                style="@style/YesButtonDialogStyle"
                 android:text="@string/yes" />
         </android.support.percent.PercentRelativeLayout>
     </LinearLayout>
