--- a/trunk/ddscanner/app/src/main/res/layout/fragment_personal_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_personal_notifications.xml
@@ -54,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_margin="15dp"
-                    android:background="@drawable/approve_count_background">
+                    style="@style/NewNotApprovedSpotsLabelBackground">
 
                     <TextView
                         android:id="@+id/new_view"
