--- a/trunk/ddscanner/app/src/main/res/drawable/add_sealife_ripple_background.xml
+++ b/trunk/ddscanner/app/src/main/res/drawable/add_sealife_ripple_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:color="@color/accent"
+    android:color="?android:colorControlHighlight"
     tools:targetApi="lollipop">
-    <item android:drawable="@drawable/dialog_yes_button"/>
+    <item android:drawable="@drawable/gray_rectangle"/>
 </ripple>
