--- a/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification_with_photo_and_text.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="60dp"
-    android:background="#fbfbfb">
+    android:background="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/user_avatar"
