--- a/trunk/ddscanner/app/src/main/res/values-v21/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values-v21/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:actionMenuTextColor">@color/white</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="colorControlHighlight">@color/spinner_triangle_color</item>
     </style>
 
 
@@ -52,13 +53,24 @@
         <item name="android:padding">10dp</item>
     </style>
 
-    <style name="OrangeButtons">
+    <style name="OrangeButtons" parent="Base.Widget.AppCompat.Button.Borderless">
         <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:layout_height">45dp</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black_text</item>
         <item name="android:background">@drawable/orange_ripple_drawable</item>
         <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:elevation">1dp</item>
+    </style>
+
+    <style name="BlueButton" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:layout_height">@dimen/button_height</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/login_button_ripple</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:elevation">1dp</item>
     </style>
 
     <style name="NewNotApprovedSpotsLabelBackground">
@@ -75,6 +87,12 @@
 
     <style name="NoButtonDialogStyle">
         <item name="android:background">@drawable/dialog_no_button_ripple</item>
+    </style>
+
+    <style name="AddSealifeButtonStyle">
+        <item name="android:background">@drawable/add_sealife_ripple_background</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/button_height</item>
     </style>
 
 </resources>
