--- a/trunk/ddscanner/app/src/main/res/layout/item_account.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_account.xml
@@ -4,7 +4,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="36dp"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:background="?attr/selectableItemBackground">
     <ImageView
         android:id="@+id/avatar"
         android:layout_width="36dp"
